--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav> 
                     <div class="topnav" id="myTopnav">
                         <a href="index.html">home</a>
-                        <a href="O nas/o_nas.html">o nas</a>
+                        <a href="o_nas/o_nas.html">o nas</a>
                         <a href="cennik/cennik.html">cennik</a>
                         <a href="kontakt/kontakt.html">Kontakt</a>
                       </div>
