--- a/cennik/cennik.html
+++ b/cennik/cennik.html
@@ -12,16 +12,16 @@
     <header>
         <div class="navbar-left">
             <i class="fa-sharp fa-solid fa-water"></i>
-            <h3><a href="FalaAquapark\index.html">FalaAquapark</h3></a>
+            <h3><a href="zaliczenie/index.html">FalaAquapark</h3></a>
         </div>  
 
         <div class="navbar-right">
             <nav> 
                 <div class="topnav" id="myTopnav">
-                    <a href="index/index.html">home</a>
-                    <a href="O nas/o_nas.html">o nas</a>
-                    <a href="cennik.html">cennik</a>
-                    <a href="kontakt/kontakt.html">Kontakt</a>
+                        <a href="index.html">home</a>
+                        <a href="o_nas/o_nas.html">o nas</a>
+                        <a href="cennik/cennik.html">cennik</a>
+                        <a href="kontakt/kontakt.html">Kontakt</a>
                   </div>
             </nav>  
         </div>
