--- a/o_nas/o_nas.html
+++ b/o_nas/o_nas.html
@@ -13,16 +13,16 @@
     <header>
             <div class="navbar-left">
                 <i class="fa-sharp fa-solid fa-water"></i>
-                <h3><a href="/index/index.html">FalaAquapark</h3></a>
+                <h3><a href="/zaliczenie/index.html">FalaAquapark</h3></a>
             </div>  
 
             <div class="navbar-right">
                 <nav> 
                     <div class="topnav" id="myTopnav">   
-                        <a href="/index/index.html">home</a>
+                        <a href="/zaliczenie/index.html">home</a>
                         <a href="o_nas.html">o nas</a>
-                        <a href="/cennik/cennik.html">Cennik</a>
-                        <a href="/kontakt/kontakt.html">Kontakt</a>
+                        <a href="/zaliczenie/cennik/cennik.html">Cennik</a>
+                        <a href="/zaliczenie/kontakt/kontakt.html">Kontakt</a>
                     </div>
                 </nav>    
             </div>    
