--- a/cennik/cennik.html
+++ b/cennik/cennik.html
@@ -18,10 +18,10 @@
         <div class="navbar-right">
             <nav> 
                 <div class="topnav" id="myTopnav">
-                        <a href="index.html">home</a>
-                        <a href="o_nas/o_nas.html">o nas</a>
-                        <a href="cennik/cennik.html">cennik</a>
-                        <a href="kontakt/kontakt.html">Kontakt</a>
+                        <a href="/zaliczenie/index.html">home</a>
+                        <a href="/zaliczenie/o_nas/o_nas.html">o nas</a>
+                        <a href="/zaliczenie/cennik/cennik.html">cennik</a>
+                        <a href="/zaliczenie/kontakt/kontakt.html">Kontakt</a>
                   </div>
             </nav>  
         </div>
