--- a/kontakt/kontakt.html
+++ b/kontakt/kontakt.html
@@ -13,15 +13,15 @@
         <div class="navbar">
             <div class="navbar-left">
                 <i class="fa-sharp fa-solid fa-water"></i>
-                <h3><a href="/index/index.html">FalaAquapark</h3></a>
+                <h3><a href="/zaliczenie/index.html">FalaAquapark</h3></a>
             </div>  
 
             <div class="navbar-right">
                 <nav>    
                     <div class="topnav" id="myTopnav">
-                        <a href="/index/index.html">home</a>
-                        <a href="/O nas/o_nas.html">o nas</a>
-                        <a href="/cennik/cennik.html">Cennik</a>
+                        <a href="/zaliczenie/index.html">home</a>
+                        <a href="/zaliczenie/o_nas/o_nas.html">o nas</a>
+                        <a href="/zaliczenie/cennik/cennik.html">Cennik</a>
                         <a href="kontakt.html">Kontakt</a>
                     </div>
                 </nav>    
