--- a/kup bilet/kup.html
+++ b/kup bilet/kup.html
@@ -14,16 +14,16 @@
     <header>
         <div class="navbar-left">
             <i class="fa-sharp fa-solid fa-water"></i>
-            <h3><a href="/index/index.html">FalaAquapark</h3></a>
+            <h3><a href="/zaliczenie/index.html">FalaAquapark</h3></a>
         </div>  
 
         <div class="navbar-right">
             <nav> 
                 <div class="topnav" id="myTopnav">
-                    <a href="/index/index.html">home</a>
-                    <a href="/O nas/o_nas.html">o nas</a>
-                    <a href="/cennik/cennik.html">cennik</a>
-                    <a href="/kontakt/kontakt.html">Kontakt</a>
+                    <a href="/zaliczenie/index.html">home</a>
+                    <a href="/zaliczenie/o_nas/o_nas.html">o nas</a>
+                    <a href="/zaliczenie/cennik/cennik.html">cennik</a>
+                    <a href="/zaliczenie/kontakt/kontakt.html">Kontakt</a>
                   </div>
             </nav>  
         </div>
