--- a/cennik/cennik.html
+++ b/cennik/cennik.html
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar-left">
             <i class="fa-sharp fa-solid fa-water"></i>
-            <h3><a href="zaliczenie/index.html">FalaAquapark</h3></a>
+            <h3><a href="/zaliczenie/index.html">FalaAquapark</h3></a>
         </div>  
 
         <div class="navbar-right">
